# yara-x

./: Cargo.toml
yara-x-cbind/: Cargo.toml  build.rs  cbindgen.toml
yara-x-cbind/include/: yara-x.h
yara-x-cbind/src/: lib.rs
yara-x/src/tests/: mod.rs
